# geodesic

./: LICENSE  README.md  agents.py  agents_to_delete.py  dataset.py  datasets.py  environments.py  jax_agents.py  jax_models.py  models.py  offline_rl_random_sample_data.csv  orchestrator.py  pyproject.toml  vla_agent.py  vla_datasets.py  vla_models.py  vla_orchestrator.py
.github/workflows/: ci.yml
configs/: vaso_dual_action_data_config.py  vaso_single_action_data_config.py  vla_libero_spatial_data_config.py
envs/: metaworld.py
mds/: atari_env_efficient_zero_investigation.md  jax_speedup.md  jax_structure.md  open_vla_model_data_investigation.md  ray_jax_runtime.md  vla_v1_with_openvla_dep_remote_setup.md
projects/grin/: moore_metaworld_mt50.py
projects/vaso/: utils.py
tests/: test_action_discretization.py  test_sequence_dataset.py  test_vaso_rewards.py  ut_dataset.py  ut_offline_rl.py  ut_offline_training.py  ut_online_rl_metaworld_mt10.py  ut_online_rl_metaworld_mt10_jax.py  ut_online_rl_metaworld_mt10_jax_moore.py  ut_online_rl_metaworld_mt50_jax.py  ut_parallel_replay_metaworld_mt10_jax.py  ut_save_load_mt10.py  ut_vla.py  ut_vla_dataset_fixture.py  ut_vla_rlds.py
